--- a/src/style.css
+++ b/src/style.css
@@ -19,3 +19,9 @@
     margin-left: 15px;
     margin-bottom: 15px;
 }
+.loading{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+}
